# sqlx

./: Cargo.toml
sqlx-bench/: Cargo.toml  README.md
sqlx-bench/benches/: pg_pipeline.rs
sqlx-bench/migrations/: 1_all.down.sql  1_all.up.sql
sqlx-core/: Cargo.toml
sqlx-core/src/postgres/: pipeline.rs
sqlx-core/src/postgres/connection/: executor.rs
src/macros/: test.md
